# Simple-HTTP

./: .gitignore  Cargo.toml  Dockerfile  README.md  request.txt
pages/: 404.html  index.html  login.html
public/javascripts/: js.js
public/pages/: index.html  login.html
src/: back.rs  db.rs  main.rs
src/http/: handle_api.rs  handle_get.rs  handle_post.rs  mod.rs  token.rs
src/multipart/: binary.rs  mod.rs
