[package]
name = "simple_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
json = "0.12.4"
sha256 = "1.5.0"
sqlite = "0.36.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
